--- a/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
@@ -37,7 +37,8 @@ category: EXPORT
  TOTSCACOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient - Fixed RH=20%
  TOTSCACOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient - Fixed RH=80%
  TOTBCKCOEF     | m-1 sr-1   | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Single Scattering Backscatter coefficient
- TOTABCKTOA     | m-1 sr-1   | xyz  | C    |                                | Total Attenuated Backscatter Coefficient [532nm]
+ TOTABCKTOA     | m-1 sr-1   | xyz  | C    |                                | Total Attenuated Backscatter Coefficient from TOA [532nm]
+ TOTABCKSFC     | m-1 sr-1   | xyz  | C    |                                | Total Attenuated Backscatter Coefficient from surface [532nm]
  PM             | kg m-3     | xy   | N    |            | Total reconstructed PM
  PM_RH35        | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=35%)
  PM_RH50        | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=50%)
