--- a/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
+++ b/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
@@ -9,7 +9,7 @@ Collections:
     template: ExtData/PIESA/sfc/co_fossilfuel_v2.x360_y181_t12.2001.nc
   CO_gmi_oh_ch4_h2o2_no3.x144_y91_z72_t12.2006.nc:
     template: ExtData/PIESA/L72/gmi_oh_ch4_h2o2_no3.x144_y91_z72_t12.2006.nc
-  CO_qfed2.emis_co.006.%y4%m2%d2.nc4
+  CO_qfed2.emis_co.006.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.006.%y4%m2%d2.nc4
     valid_range: "2014-12-01T12:00/2021-11-01T12:00"
   CO_qfed2.emis_co.061.%y4%m2%d2.nc4:
