--- a/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp.rc
+++ b/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp.rc
@@ -5,23 +5,31 @@
 #
 #  http://www.geos5.org/wiki/index.php?title=GEOS-5_Configuration_for_GloPac
 #
-# ------------------|-------|------------
+# ------------------+-------+------------
 #       Region      | Tag   |   Masking
-# ------------------|-------|------------
+# ------------------+-------+------------
 #  Biomass burning
-# ------------------|-------|------------
-#   Asia and Europe | bbae  | 3, 9, 10 # no longer includes SE Asia
+# ------------------+-------+------------
+#   Asia and Europe | bbae  | 3, 9, 10 # no longer includes SE Asia (4)
 #     North America | bbna  | 1
 # Cen. & S. America | bbla  | 2, 6
 #            Africa | bbaf  | 5
 #            Global | bbgl  | Global
-# ------------------|-------|------------
-#  Non-biomass burning
-# ------------------|-------|------------
-#              Asia | nbas  | 4, 10
-#     North America | nbna  | 1
+# ------------------+-------+------------
+#  Fossil fuels
+# ------------------+-------+------------
+#              Asia | ffas  | 4, 10
 #            Europe | nbeu  | 3, 9
+#     North America | ffna  | 1
+#     Northern Asia | ffru  | 10
+#            Global | ffgl  | Global
+# ------------------+-------+------------
+#  Non-biomass burning
+# ------------------+-------+------------
+#              Asia | nbas  | 4, 10
+#            Europe | nbeu  | 3, 9
+#     North America | nbna  | 1
 #            Global | nbgl  | Global
-# ------------------|-------|------------
+# ------------------+-------+------------
 
 CO_instances: full bbae bbna bbla bbaf bbgl nbas nbna nbeu nbgl
