--- a/ESMF/GOCART_GridComp/CO_GridComp/CO_Registry.rc
+++ b/ESMF/GOCART_GridComp/CO_GridComp/CO_Registry.rc
@@ -158,4 +158,42 @@
   CODRYbfgl  | mol mol-1   | xyz | C |    |   |   |     | CO Dry-Air Mole Fraction (Biofuels: Global)
   CODRYcpgl  | mol mol-1   | xyz | C |    |   |   |     | CO Dry-Air Mole Fraction (Chemical Production: Global)
 #------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  COSD       | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration __ENSEMBLE__
+  COSDsim    | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (All Sources; No Assimilation)
+  COSDbbae   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biomass Burning: Asia and Europe)
+  COSDbbaf   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biomass Burning: Africa)
+  COSDbbla   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biomass Burning: Central and South America)
+  COSDbbna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biomass Burning: North America)
+  COSDbbgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biomass Burning: Global)
+  COSDffas   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Fossil Fuels: Asia)
+  COSDffeu   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Fossil Fuels: Europe)
+  COSDffna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Fossil Fuels: North America)
+  COSDffru   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Fossil Fuels: Northern Asia)
+  COSDffgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Fossil Fuels: Global)
+  COSDnbas   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Non-Biomass Burning: Asia)
+  COSDnbeu   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Non-Biomass Burning: Europe)
+  COSDnbna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Non-Biomass Burning: North America)
+  COSDnbgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Non-Biomass Burning: Global)
+  COSDbfgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Biofuels: Global)
+  COSDcpgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Surface Concentration (Chemical Production: Global)
+#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  COCD       | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden __ENSEMBLE__
+  COCDsim    | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (All Sources; No Assimilation)
+  COCDbbae   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biomass Burning: Asia and Europe)
+  COCDbbaf   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biomass Burning: Africa)
+  COCDbbla   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biomass Burning: Central and South America)
+  COCDbbna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biomass Burning: North America)
+  COCDbbgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biomass Burning: Global)
+  COCDffas   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Fossil Fuels: Asia)
+  COCDffeu   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Fossil Fuels: Europe)
+  COCDffna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Fossil Fuels: North America)
+  COCDffru   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Fossil Fuels: Northern Asia)
+  COCDffgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Fossil Fuels: Global)
+  COCDnbas   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Non-Biomass Burning: Asia)
+  COCDnbeu   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Non-Biomass Burning: Europe)
+  COCDnbna   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Non-Biomass Burning: North America)
+  COCDnbgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Non-Biomass Burning: Global)
+  COCDbfgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Biofuels: Global)
+  COCDcpgl   | mol mol-1   | xy  |   |    |   |   |     | CO Dry-Air Column Burden (Chemical Production: Global)
+#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
 </CO::ExportSpec>
