--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP.20C/SU2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP.20C/SU2G_GridComp_ExtData.rc
@@ -10,25 +10,25 @@ climSO4         'kg kg-1'     Y   N               0              0.0      1.0   
 #climMSA         'kg kg-1'     Y   N               -              0.0      1.0     none       /dev/null
 #climSO2         'kg kg-1'     Y   N               -              0.0      1.0     none       /dev/null
 
-climSUDP001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-climSUWT001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUDP001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP001    /dev/null
+climSUWT001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT001    /dev/null
 climSUSD001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD001    /dev/null
-climSUSV001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV001    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUSV001    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV001    /dev/null
 
-climSUDP002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-climSUWT002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUDP002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP002    /dev/null
+climSUWT002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT002    /dev/null
 climSUSD002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD002    /dev/null
-climSUSV002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV002    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUSV002    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV002    /dev/null
 
-climSUDP003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-climSUWT003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUDP003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP003    /dev/null
+climSUWT003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT003    /dev/null
 climSUSD003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD003    /dev/null
-climSUSV003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV003    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUSV003    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV003    /dev/null
 
-climSUDP004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-climSUWT004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUDP004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUDP004    /dev/null
+climSUWT004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUWT004    /dev/null
 climSUSD004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSD004    /dev/null
-climSUSV004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV004    ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+climSUSV004    'kg m-2 s-1'   Y   N               0              0.0      1.0     SUSV004    /dev/null
 
 
 #====== Sulfate Sources =================================================
