--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.rc
@@ -10,6 +10,8 @@ climBCphobic   'kg kg-1'   Y        N               0              0.0      1.0 
 climBCphilic   'kg kg-1'   Y        N               0              0.0      1.0     BCPHILIC   ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
 climOCphobic   'kg kg-1'   Y        N               0              0.0      1.0     OCPHOBIC   ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
 climOCphilic   'kg kg-1'   Y        N               0              0.0      1.0     OCPHILIC   ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
+climBRphobic   'kg kg-1'   Y        N               0              0.0      1.0     BRPHOBIC   /dev/null
+climBRphilic   'kg kg-1'   Y        N               0              0.0      1.0     BRPHILIC   /dev/null
 
 climBCDP001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BCDP001    /dev/null
 climBCWT001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BCWT001    /dev/null
@@ -30,6 +32,16 @@ climOCDP002   'kg m-2 s-1'  Y        N               0              0.0      1.0
 climOCWT002   'kg m-2 s-1'  Y        N               0              0.0      1.0     OCWT002    /dev/null
 climOCSD002   'kg m-2 s-1'  Y        N               0              0.0      1.0     OCSD002    /dev/null
 climOCSV002   'kg m-2 s-1'  Y        N               0              0.0      1.0     OCSV002    /dev/null
+
+climBRDP001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRDP001    /dev/null
+climBRWT001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRWT001    /dev/null
+climBRSD001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRSD001    /dev/null
+climBRSV001   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRSV001    /dev/null
+
+climBRDP002   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRDP002    /dev/null
+climBRWT002   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRWT002    /dev/null
+climBRSD002   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRSD002    /dev/null
+climBRSV002   'kg m-2 s-1'  Y        N               0              0.0      1.0     BRSV002    /dev/null
 
 
 #=========== Carbonaceous aerosol sources ===========================================
